# Convenient_Anime_Manager

./: CMakeLists.txt  README.md  anime_management_homepage.cpp  anime_management_homepage.h  img.qrc  main.cpp
Cards_Page/: Ratio_Slider.h  anime_card.cpp  anime_card.h  cardlayoutmanager.cpp  cardlayoutmanager.h  cards_page.cpp  cards_page.h  customscrollbar.cpp  customscrollbar.h  ratio_slider.cpp
Cards_Page/Menu_Set/: new_menu_set.cpp  new_menu_set.h  right_click_menu_button.cpp  right_click_menu_button.h  right_click_menu_set.cpp  right_click_menu_set.h
Cards_Page/Menu_Set/New_Menu_Component/: Time_Button_Module.cpp  Time_Button_Module.h  Time_Selection_Module.cpp  Time_Selection_Module.h  function_button.cpp  function_button.h  input_box.cpp  input_box.h
Horizontal_Navigation_Page/: button_slider_component.cpp  button_slider_component.h  horizontal_button.cpp  horizontal_button.h  horizontal_navigation_page.cpp  horizontal_navigation_page.h  show_all.cpp  show_all.h
Left_Window_Tip_Area/: left_window_tip.cpp  left_window_tip.h
Playback_Page/: playback_page.cpp  playback_page.h  video_control_area.cpp  video_control_area.h  video_episode_bar.cpp  video_episode_bar.h  video_episode_bar_shell.cpp  video_episode_bar_shell.h  video_info_bar.cpp  video_info_bar.h  video_playback_area.cpp  video_playback_area.h
Playback_Page/Video_Components/: back_button.cpp  back_button.h  control_area.cpp  control_area.h  control_button.cpp  control_button.h  episode_button.cpp  episode_button.h  playback_status_button.cpp  playback_status_button.h  progress_bar.cpp  progress_bar.h
Singleton_Set/: Database_Related.h  central_bundle_bridge.cpp  central_bundle_bridge.h  database_related.cpp  file_related.cpp  file_related.h  status_group.cpp  status_group.h
